--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
     
     <div class="background">
-      <h1 class="headingTwo">Flip the Coin</h1>
-      <p class="pTwo">Press the coin or the button to flip the coin</p>
-      <img id="coin" class="coinTwo" src="./resources/heads.svg" height="150" width="150"/>
-      <img id="shadow" class="shadowTwo" src="./resources/shadow.svg"/>
-      <p id="result" class="resultTwo">Heads</p>
-      <button type="button" class="buttonTwo">Flip Coin</button>
+      <h1>Flip the Coin</h1>
+      <p>Press the coin or the button to flip the coin</p>
+      <img id="coin"  src="./resources/heads.svg" height="150" width="150"/>
+      <img id="shadow"  src="./resources/shadow.svg"/>
+      <p id="result" >Heads</p>
+      <button type="button" >Flip Coin</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
