--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="background">
       <h1>Flip the Coin</h1>
       <p>Press the coin or the button to flip the coin</p>
-      <img id="coin" class="coinTwo"  src="./resources/heads.svg" height="150" width="150"/>
+      <img id="coin"   src="./resources/heads.svg" height="150" width="150"/>
       <img id="shadow"  src="./resources/shadow.svg"/>
       <p id="result" >Heads</p>
       <button type="button" >Flip Coin</button>
